force-app/main/default/objects/Directive_View__mdt/Directive_View__mdt.object-meta.xml
<CustomObject>
    <label>Directive View</label>
    <pluralLabel>Directive Views</pluralLabel>
</CustomObject>