force-app/main/default/objects/Directive_View__mdt/fields/Filter_Definition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Definition__c</fullName>
    <label>Filter Definition</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>