force-app/main/default/objects/Directive_View__mdt/fields/Shared__c.field-meta.xml
<CustomField>
    <fullName>Shared__c</fullName>
    <label>Shared</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>