force-app/main/default/objects/Directive_View__mdt/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>Sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>